--- a/style.css
+++ b/style.css
@@ -1,14 +1,2 @@
-h2{
-    color: aqua;
-}
-
-.menu{
-    display: inline-block; /* deixa lado a lado */
-    padding: 10px 20px; /*  */
-    background-color: cyan;
-    border-radius: 16px;
-    cursor:pointer;
-}
-.menu:houver{
-    
-}
+a{text-decoration: none;}
+.menu{list-style-type: none;}
